# skjold

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .skjoldignore  LICENSE  Makefile  README.md  mypy.ini  pyproject.toml  pytest.ini
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml
.github/workflows/: publish.yml  test.yml
src/skjold/: cli.py  core.py  cvss.py  formats.py  ignore.py  models.py  tasks.py
src/skjold/sources/: __init__.py  gemnasium.py  github.py  osv.py  pypa.py  pyup.py
tests/: conftest.py  test_cli.py  test_cvss.py  test_formats.py  test_gemnasium.py  test_github.py  test_ignore.py  test_osv.py  test_pypa.py  test_pyup.py  test_sources.py
tests/fixtures/formats/ignore/: all  example
tests/fixtures/formats/minimal/: requirements.txt
tests/fixtures/formats/pip/: requirements_with_hashes.txt
tests/fixtures/formats/random/: requirements.txt
tests/fixtures/gemnasium/: CVE-2014-1932.yml  CVE-2020-28476.yml  multiple.yml
tests/fixtures/osv/: introduced-and-fixed.yaml  introduced-and-versions.yaml  introduced-only.yaml
