[tool.poetry]
name = 'skjold'
version = '0.2.1'
description = 'Security audit Python project dependencies against security advisory databases.'
authors = ["Thomas Wurmitzer <t.wurmitzer+github@gmail.com>"]
packages = [{ include="skjold/**/*.py", from = "src" }]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/twu/skjold"
repository = "https://github.com/twu/skjold"
keywords = [
    "security",
    "security-vulnerability",
    "vulnerability-scanners",
    "vulnerabilities",
    "vulnerability-detection"
]
# https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Utilities",
    "Typing :: Typed",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/twu/skjold/issues"
"Changelog" = "https://github.com/twu/skjold/releases"

[tool.poetry.scripts]
skjold = 'skjold.cli:cli'

[tool.poetry.dependencies]
python = "^3.6"
click = "^7.0"
poetry-semver = "^0.1.0"
pyyaml = "^5.3"
toml = ">=0.10.0"

[tool.poetry.dev-dependencies]
pytest-watch = "^4.2.0"
pytest-sugar = "^0.9.4"
pytest-mock = "^3.5.1"
pre-commit = '>=1.20.0'
black = '>=19.10b0'
mypy = "^0.812"
coverage = {extras = ["toml"], version = "^5.4"}
pytest-cov = "^2.11.1"
pytest = "^6.2.2"

[tool.skjold]
report_only = true
report_format = 'json'
sources = ["pyup", "github", "gemnasium"]
cache_dir = ".skjold_cache"
cache_expires = 43200

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-s"
log_cli_level = "INFO"
testpaths = [
    "tests",
]
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::PendingDeprecationWarning",
  "ignore::UserWarning",
]

[tool.black]
line-length = 88
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == \"__main__\":",
]

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
